Changelog
=========

2019.2.1 (unreleased)
---------------------

- Show filters also on no contents page in document listings. [phgross]


2019.2.0 (2019-05-16)
---------------------

- Use the new split off registry configuration in the Oneoffixx API client. [Rotonen]
- Fix parent-link styling in the userdetails view. [phgross]
- Use smaller or equal in time window checking for nightly runner. [njohner]
- Nightly jobs: Also log exceptions to logfile, not just Sentry. [lgraf]
- Set 90px as a minimum instead of fixed height for description-like widgets. [lgraf]
- Fix resolving of multi-adminunit tasks. [phgross]
- Fix the setting of the content-type for Oneoffixx templates. [Rotonen]
- Concistently use "déroulement standard" for tasktemplates in French. [njohner]
- Update and add missing French translations. [njohner, andresoberhaensli]
- Update favorite-icon after cancel a document checkout. [phgross]
- Fix has_children indexer which lead to duplicate brains. [njohner, phgross]
- Add a configurable scope for Oneoffixx OAuth2 grant requests. [Rotonen]
- Trash: Update and reindex modification date when trashing documents. [lgraf]
- Respect tabbedview settings when generating a document excel export. [phgross]
- Add file_extension indexer for mails. [phgross]
- Fix upgrade step adding document_type index to not update the metadata. [njohner]
- Log nightly job output to a dedicated, self-rotating logfile. [lgraf]
- Add flag to force execution of nightly jobs. [njohner]
- Fix task activity tests. [njohner]
- Implement nightly job to perform jobs after dossier resolution. [lgraf]
- Bump plone.restapi to 3.9.0. [phgross]
- Improve the styling of the tabbedview keyword filter. [phgross]
- Adapt task reassign activity message. [njohner]
- Queue each document archival conversion only once in a single request. [njohner]
- Do not fire task delegate activity twice. [njohner]
- Do not allow sorting on Keywords in dossier and document listings. [njohner]