@@ -5,6 +5,7 @@ Changelog
 ---------------------
 
 - Show filters also on no contents page in document listings. [phgross]
+- Make subject column non-sortable in storred dictstorage settings. [flipsi]
 
 
 2019.2.0 (2019-05-16)
